Pre_CC: initial commit

--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -33,7 +33,6 @@ jobs:
         python -m build
 
     - name: Deploy package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
+      run: |
+        python -m pip twine --upgrade
+        python -m twine upload -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} --skip-existing
