--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -35,4 +35,4 @@ jobs:
     - name: Deploy package
       run: |
         python -m pip install twine
-        python -m twine upload -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} --skip-existing
+        python -m twine upload dist/* -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} --skip-existing
