--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -6,10 +6,10 @@ on:
     
 jobs:
 
-  build-windows:
+  deploy-package:
     
     runs-on: windows-2019
-    if: "! contains(github.event.head_commit.message, '[skip ci]')"
+    if: "contains(github.event.head_commit.message, '(pypi)')"
     strategy:
       matrix:
         python-version: [ 3.9 ]
