--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -3,10 +3,16 @@ name: Deploy Package
 on:
   workflow_dispatch:
       inputs:
-        release version:
-          description: 'DPG Version'
-          required: false
+
+        version:
+          description: 'Dear PyGui Extension Version'
+          required: true
           default: '0.8.0'
+
+        deploy:
+          description: 'Deploy (true will deploy)'
+          required: true
+          default: 'false'
 
 jobs:
 
@@ -34,10 +40,11 @@ jobs:
 
     - name: Build package
       run: |
-        echo %INPUT_RELEASE_VERSION% > version_number.txt
+        echo %INPUT_VERSION% > version_number.txt
         python -m build
 
     - name: Deploy package
+      if: "contains(github.event.inputs.deploy, 'true')"
       run: |
         python -m pip install twine
         python -m twine upload dist/* -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} --skip-existing
