--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -47,3 +47,12 @@ jobs:
       run: |
         python -m pip install twine
         python -m twine upload dist/* -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} --skip-existing
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: dearpygui_ext wheel
+        path: |
+          ${{ github.workspace }}/dist/*.whl
+          ${{ github.workspace }}/dist/*.tar.gz
+        retention-days: 1
+        if-no-files-found: error
