--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -34,12 +34,11 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip setuptools wheel build
-        pip install dearpygui
+        python -m pip install --upgrade pip setuptools wheel build dearpygui
 
     - name: Build package
       run: |
-        echo %INPUT_VERSION% > version_number.txt
+        echo $env:INPUT_VERSION > version_number.txt
         python -m build
 
     - name: Deploy package
