--- a/.github/workflows/DeployPackage.yml
+++ b/.github/workflows/DeployPackage.yml
@@ -37,11 +37,15 @@ jobs:
         python -m pip install --upgrade pip setuptools wheel build dearpygui
 
     - name: Build package
+      shell: cmd
       run: |
-        echo $env:INPUT_VERSION > version_number.txt
+        cd %GITHUB_WORKSPACE%
+        echo %INPUT_VERSION% > version_number.txt
+        echo ${{ github.events.input.version }} > version_number1.txt
         python -m build
 
     - name: Deploy package
+      shell: cmd
       if: "contains(github.event.inputs.deploy, 'true')"
       run: |
         python -m pip install twine
@@ -52,6 +56,7 @@ jobs:
         name: dearpygui_ext wheel
         path: |
           ${{ github.workspace }}/version_number.txt
+          ${{ github.workspace }}/version_number1.txt
           ${{ github.workspace }}/dist/*.whl
           ${{ github.workspace }}/dist/*.tar.gz
         retention-days: 1
